Amended pom files

--- a/example-webapp/pom.xml
+++ b/example-webapp/pom.xml
@@ -9,6 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <artifactId>example-webapp</artifactId>
     <version>1.0</version>
     <dependencies>
