--- a/cappuccino-framework-web/pom.xml
+++ b/cappuccino-framework-web/pom.xml
@@ -14,21 +14,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
-
-    <developers>
-        <developer>
-            <name>Cesare Giani Contini</name>
-        </developer>
-    </developers>
-
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
 
     <artifactId>cappuccino-framework-web</artifactId>
     <version>1.0</version>
@@ -75,6 +62,7 @@
             </exclusions>
         </dependency>
     </dependencies>
+
 
 
 </project>
