--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,26 @@
 	<name>Cappuccino Framework</name>
 	<description>A framework to quickly generate dynamic pages and forms with java spring boot and thymeleaf template engine</description>
 
+    <developers>
+        <developer>
+            <name>Cesare Giani Contini</name>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/cesarecontini/cappuccino-framework</url>
+        <connection>scm:git:git@github.com:cesarecontini/cappuccino-framework.git</connection>
+        <developerConnection>scm:git:git@github.com:cesarecontini/cappuccino-framework.git</developerConnection>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
 	<properties>
 		<java.version>1.8</java.version>
         <version.spring-boot>2.2.3.RELEASE</version.spring-boot>
@@ -93,6 +113,62 @@
 
         </dependencies>
 	</dependencyManagement>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <distributionManagement>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.1.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 
 </project>
